--- a/wanmen/index.html
+++ b/wanmen/index.html
@@ -302,7 +302,7 @@
 
         		<div class="videoCon marginLR">
         			<div class="videoImg">
-        				<a href="##"><img src="./img/highschool.png" /></a>
+        				<a href="##"><img src="./img/highSchool.png" /></a>
         			</div>
         			<div class="imgIntro">
         				<span class="span1">高中理科一月特训班</span>
